syntax = "proto3";

package kurrentdb.protocol.v2;

option csharp_namespace    = "KurrentDB.Protocol.Streams.V2";
option java_package        = "io.kurrentdb.protocol.streams.v2";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

// ErrorDetails provides detailed information about specific error conditions.
message ErrorDetails {
  // When the user does not have sufficient permissions to perform the operation.
  message AccessDenied { }

  // When the stream has been deleted.
  message StreamDeleted {
    // The name of the stream that was deleted.
    string stream = 1;
    // The time when the stream was deleted.
    google.protobuf.Timestamp deleted_at = 2;
    // If the stream was hard deleted, you cannot reuse the stream name,
    // it will raise an exception if you try to append to it again.
    bool tombstoned = 3;
  }

  // When the stream is not found.
  message StreamNotFound {
    // The name of the stream that was not found.
    string stream = 1;
  }

  // When the expected revision of the stream does not match the actual revision.
  message WrongExpectedRevision {
    // The actual revision of the stream.
    int64 stream_revision = 1;
  }

  // When the transaction exceeds the maximum size allowed
  // (its bigger than the configured chunk size).
  message TransactionMaxSizeExceeded {
    // The maximum allowed size of the transaction.
    uint32 max_size = 1;
  }
}

//===================================================================
// Dynamic values map
//===================================================================

// Represents a list of dynamically typed values.
message DynamicValueList {
  // Repeated property of dynamically typed values.
  repeated DynamicValue values = 1;
}

// Represents a map of dynamically typed values.
message DynamicValueMap {
  // A map of string keys to dynamically typed values.
  map<string, DynamicValue> values = 1;
}

// Represents a dynamic value
message DynamicValue {
  oneof kind {
    // Represents a null value.
    google.protobuf.NullValue null_value = 1;
    // Represents a 32-bit signed integer value.
    sint32 int32_value = 2;
    // Represents a 64-bit signed integer value.
    sint64 int64_value = 3;
    // Represents a byte array value.
    bytes bytes_value = 4;
    // Represents a 64-bit double-precision floating-point value.
    double double_value = 5;
    // Represents a 32-bit single-precision floating-point value
    float float_value = 6;
    // Represents a string value.
    string string_value = 7;
    // Represents a boolean value.
    bool boolean_value = 8;
    // Represents a timestamp value.
    google.protobuf.Timestamp timestamp_value = 9;
    // Represents a duration value.
    google.protobuf.Duration duration_value = 10;

//    // Represents a json struct
//    google.protobuf.Struct struct_value = 12;

    // Represents a list of dynamic values.
    //ListDynamicValue list_value = 11;
  }
}
